[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/UI/Score.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/Score.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/UI/HighScores.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="HighScores" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 40.0
margin_right = 150.0
margin_bottom = 140.0

[node name="Score1" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 130.0
margin_bottom = 16.0

[node name="Score2" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 20.0
margin_right = 130.0
margin_bottom = 36.0
score_index = 2

[node name="Score3" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 40.0
margin_right = 130.0
margin_bottom = 56.0
score_index = 3

[node name="Score4" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 60.0
margin_right = 130.0
margin_bottom = 76.0
score_index = 4

[node name="Score5" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 80.0
margin_right = 130.0
margin_bottom = 96.0
score_index = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 170.0
margin_top = 40.0
margin_right = 300.0
margin_bottom = 140.0

[node name="Score1" parent="VBoxContainer2" instance=ExtResource( 1 )]
margin_right = 130.0
margin_bottom = 16.0
score_index = 6

[node name="Score2" parent="VBoxContainer2" instance=ExtResource( 1 )]
margin_top = 20.0
margin_right = 130.0
margin_bottom = 36.0
score_index = 7

[node name="Score3" parent="VBoxContainer2" instance=ExtResource( 1 )]
margin_top = 40.0
margin_right = 130.0
margin_bottom = 56.0
score_index = 8

[node name="Score4" parent="VBoxContainer2" instance=ExtResource( 1 )]
margin_top = 60.0
margin_right = 130.0
margin_bottom = 76.0
score_index = 9

[node name="Score5" parent="VBoxContainer2" instance=ExtResource( 1 )]
margin_top = 80.0
margin_right = 130.0
margin_bottom = 96.0
score_index = 10

[node name="NameEdit" type="LineEdit" parent="."]
margin_left = 102.0
margin_top = 144.0
margin_right = 218.0
margin_bottom = 170.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "???"
align = 1
max_length = 8

[node name="HighScoreLabel" type="Label" parent="."]
margin_left = 108.0
margin_top = 12.0
margin_right = 212.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "HIGH SCORES"
